display the content with the traduction

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,9 +17,10 @@
       {{ form.uploadfile }}
       {{ form.submit }}
       {% if test_ok %}
+          <h3>LA TRADUCTION : </h3>
           <p>{{ content_text }}</p>
       {% else %}
-          <p>Narutoooo</p>
+          <p></p>
       {% endif %} 
     </form>
   </body>
